--- a/countdown_from_the_middle.ui
+++ b/countdown_from_the_middle.ui
@@ -39,7 +39,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QSpinBox" name="minute">
+  <widget class="QTimeSpinBox" name="minute">
    <property name="geometry">
     <rect>
      <x>70</x>
@@ -49,7 +49,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QSpinBox" name="second">
+  <widget class="QTimeSpinBox" name="second">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -99,6 +99,13 @@
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QTimeSpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>qtimespinbox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
